--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@babel/core": "7.0.0",
     "@babel/preset-env": "7.0.0",
-    "babel-core": "7.0.0-0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.4.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babelify": "10.0.0",
